--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/postgres.sbt
 jdbc.username=postgres
-jdbc.password=postgres
+jdbc.password=djhjyf76
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 hibernate.show_sql=true
