Реализация основных сущностей и сервисов 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/postgres.sbt
+jdbc.url=jdbc:postgresql://localhost:5432/postgres
 jdbc.username=postgres
 jdbc.password=djhjyf76
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 # none
 # create
 # update
