--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     </properties>
 
     <dependencies>
+
+        <!-- Spring -->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -27,6 +30,8 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.3.3.RELEASE</version>
         </dependency>
+
+        <!-- База -->
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -41,9 +46,30 @@
         </dependency>
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
+        <!-- Тестирование -->
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.5.10</version>
             <scope>test</scope>
         </dependency>
 
