--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jdbc.username=postgres
 jdbc.password=djhjyf76
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=create-drop
 # none
